force-app/main/default/objects/Inbound_Batch_Status__mdt/Inbound_Batch_Status__mdt.object-meta.xml
<CustomObject>
    <label>Inbound Batch Status</label>
    <pluralLabel>Inbound Batch Status</pluralLabel>
</CustomObject>