force-app/main/default/objects/Inbound_Batch_Status__mdt/fields/IsProcessable__c.field-meta.xml
<CustomField>
    <fullName>IsProcessable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsProcessable</label>
    <type>Checkbox</type>
</CustomField>