force-app/main/default/objects/Inbound_Batch_Status__mdt/fields/IsTerminal__c.field-meta.xml
<CustomField>
    <fullName>IsTerminal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsTerminal</label>
    <type>Checkbox</type>
</CustomField>