force-app/main/default/objects/Inbound_Batch_Status__mdt/fields/IsTimeoutEligible__c.field-meta.xml
<CustomField>
    <fullName>IsTimeoutEligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsTimeoutEligible</label>
    <type>Checkbox</type>
</CustomField>